Rework UI so that skipping to the next step and playing the step (applying the changes) are two distinct actions.

--- a/Examples/RelationChangeApp/Base.lproj/MainMenu.xib
+++ b/Examples/RelationChangeApp/Base.lproj/MainMenu.xib
@@ -15,8 +15,9 @@
         <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="RelationChangeApp">
             <connections>
                 <outlet property="nextButton" destination="xh3-Zi-i4Q" id="rXU-U0-1AH"/>
-                <outlet property="previousButton" destination="clW-7q-7ys" id="WLl-DR-l3r"/>
                 <outlet property="replayButton" destination="gIJ-Je-G36" id="gDl-HO-vDF"/>
+                <outlet property="resetButton" destination="zdk-uC-53P" id="ae7-N3-kib"/>
+                <outlet property="scrollView" destination="Jxl-IB-8gv" id="Vvl-Pg-GT3"/>
                 <outlet property="tableContainer" destination="Obe-lp-Zh6" id="HAR-lR-06Q"/>
                 <outlet property="textView" destination="0Yk-T4-0dR" id="clo-Iz-FH9"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="MEA-UP-LPE"/>
@@ -675,25 +676,25 @@
         <window title="RelationChangeApp" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="335" y="390" width="569" height="606"/>
+            <rect key="contentRect" x="335" y="390" width="729" height="668"/>
             <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1417"/>
             <view key="contentView" wantsLayer="YES" id="EiT-Mj-1SZ">
-                <rect key="frame" x="0.0" y="0.0" width="569" height="606"/>
+                <rect key="frame" x="0.0" y="0.0" width="729" height="668"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <scrollView fixedFrame="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jxl-IB-8gv">
-                        <rect key="frame" x="20" y="472" width="489" height="116"/>
+                    <scrollView fixedFrame="YES" borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jxl-IB-8gv">
+                        <rect key="frame" x="20" y="472" width="551" height="176"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <clipView key="contentView" ambiguous="YES" id="y8b-6T-vEN">
-                            <rect key="frame" x="1" y="1" width="487" height="114"/>
+                            <rect key="frame" x="0.0" y="0.0" width="551" height="176"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
-                                <textView ambiguous="YES" editable="NO" importsGraphics="NO" usesFontPanel="YES" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" smartInsertDelete="YES" id="0Yk-T4-0dR" customClass="TextView" customModule="RelationChangeApp">
-                                    <rect key="frame" x="0.0" y="0.0" width="487" height="114"/>
+                                <textView ambiguous="YES" editable="NO" selectable="NO" importsGraphics="NO" usesFontPanel="YES" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" smartInsertDelete="YES" id="0Yk-T4-0dR" customClass="TextView" customModule="RelationChangeApp">
+                                    <rect key="frame" x="0.0" y="0.0" width="551" height="176"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <size key="minSize" width="487" height="114"/>
-                                    <size key="maxSize" width="487" height="10000000"/>
+                                    <size key="minSize" width="551" height="176"/>
+                                    <size key="maxSize" width="551" height="10000000"/>
                                     <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                 </textView>
                             </subviews>
@@ -704,46 +705,47 @@
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="fim-S8-cws">
-                            <rect key="frame" x="472" y="1" width="16" height="114"/>
+                            <rect key="frame" x="535" y="0.0" width="16" height="176"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
-                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="clW-7q-7ys" customClass="Button" customModule="PLBindableControls">
-                        <rect key="frame" x="517" y="552" width="32" height="32"/>
+                    <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Obe-lp-Zh6" userLabel="Table Container" customClass="BackgroundView" customModule="PLBindableControls">
+                        <rect key="frame" x="20" y="20" width="551" height="444"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSLeftFacingTriangleTemplate" imagePosition="overlaps" alignment="center" imageScaling="proportionallyDown" inset="2" id="mM8-Sd-faH">
+                    </customView>
+                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zdk-uC-53P" customClass="Button" customModule="PLBindableControls">
+                        <rect key="frame" x="579" y="518" width="136" height="32"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <buttonCell key="cell" type="push" title="Back to Step 1" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="HTO-r9-wUV">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
+                            <string key="keyEquivalent" base64-UTF8="YES">
+DQ
+</string>
                         </buttonCell>
                     </button>
                     <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gIJ-Je-G36" customClass="Button" customModule="PLBindableControls">
-                        <rect key="frame" x="517" y="515" width="32" height="31"/>
+                        <rect key="frame" x="579" y="485" width="136" height="32"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSRefreshTemplate" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="6Hl-Du-VuQ">
+                        <buttonCell key="cell" type="push" title="Replay Step" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="6Hl-Du-VuQ">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
                         </buttonCell>
                     </button>
-                    <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Obe-lp-Zh6" userLabel="Table Container" customClass="BackgroundView" customModule="PLBindableControls">
-                        <rect key="frame" x="20" y="20" width="529" height="444"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    </customView>
                     <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xh3-Zi-i4Q" customClass="Button" customModule="PLBindableControls">
-                        <rect key="frame" x="517" y="477" width="32" height="32"/>
+                        <rect key="frame" x="579" y="518" width="136" height="32"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSRightFacingTriangleTemplate" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="Beq-hj-ave">
+                        <buttonCell key="cell" type="push" title="Next Step" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Beq-hj-ave">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
+                            <string key="keyEquivalent" base64-UTF8="YES">
+DQ
+</string>
                         </buttonCell>
                     </button>
                 </subviews>
             </view>
-            <point key="canvasLocation" x="-64.5" y="-185"/>
+            <point key="canvasLocation" x="15.5" y="-216"/>
         </window>
     </objects>
-    <resources>
-        <image name="NSLeftFacingTriangleTemplate" width="9" height="12"/>
-        <image name="NSRefreshTemplate" width="11" height="15"/>
-        <image name="NSRightFacingTriangleTemplate" width="9" height="12"/>
-    </resources>
 </document>
