--- a/Examples/TodoApp/Base.lproj/MainMenu.xib
+++ b/Examples/TodoApp/Base.lproj/MainMenu.xib
@@ -13,22 +13,20 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="HelloWorldApp">
+        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="TodoApp">
             <connections>
-                <outlet property="empDeptLabel" destination="ucd-lB-fTw" id="UA3-AD-ip7"/>
-                <outlet property="empNameLabel" destination="2dB-AM-oPr" id="aJr-Xl-C1F"/>
-                <outlet property="outlineView" destination="npL-MS-w2J" id="Rrk-J7-aJb"/>
+                <outlet property="tableContainer" destination="Obe-lp-Zh6" id="HAR-lR-06Q"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="MEA-UP-LPE"/>
             </connections>
         </customObject>
         <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
         <menu title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
             <items>
-                <menuItem title="HelloWorldApp" id="1Xt-HY-uBw" userLabel="HelloWorldApp">
+                <menuItem title="TodoApp" id="1Xt-HY-uBw">
                     <modifierMask key="keyEquivalentModifierMask"/>
-                    <menu key="submenu" title="HelloWorldApp" systemMenu="apple" id="uQy-DD-JDr">
+                    <menu key="submenu" title="TodoApp" systemMenu="apple" id="uQy-DD-JDr">
                         <items>
-                            <menuItem title="About HelloWorldApp" id="5kV-Vb-QxS">
+                            <menuItem title="About TodoApp" id="5kV-Vb-QxS">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="orderFrontStandardAboutPanel:" target="-1" id="Exp-CZ-Vem"/>
@@ -42,7 +40,7 @@
                                 <menu key="submenu" title="Services" systemMenu="services" id="hz9-B4-Xy5"/>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="4je-JR-u6R"/>
-                            <menuItem title="Hide HelloWorldApp" keyEquivalent="h" id="Olw-nP-bQN">
+                            <menuItem title="Hide TodoApp" keyEquivalent="h" id="Olw-nP-bQN">
                                 <connections>
                                     <action selector="hide:" target="-1" id="PnN-Uc-m68"/>
                                 </connections>
@@ -60,7 +58,7 @@
                                 </connections>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="kCx-OE-vgT"/>
-                            <menuItem title="Quit HelloWorldApp" keyEquivalent="q" id="4sb-4s-VLi">
+                            <menuItem title="Quit TodoApp" keyEquivalent="q" id="4sb-4s-VLi">
                                 <connections>
                                     <action selector="terminate:" target="-1" id="Te7-pn-YzF"/>
                                 </connections>
@@ -661,7 +659,7 @@
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <menu key="submenu" title="Help" systemMenu="help" id="F2S-fz-NVQ">
                         <items>
-                            <menuItem title="HelloWorldApp Help" keyEquivalent="?" id="FKE-Sm-Kum">
+                            <menuItem title="TodoApp Help" keyEquivalent="?" id="FKE-Sm-Kum">
                                 <connections>
                                     <action selector="showHelp:" target="-1" id="y7X-2Q-9no"/>
                                 </connections>
@@ -671,124 +669,22 @@
                 </menuItem>
             </items>
         </menu>
-        <window title="HelloWorldApp" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
-            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
+        <window title="TodoApp" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
+            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="335" y="390" width="480" height="360"/>
+            <rect key="contentRect" x="335" y="390" width="820" height="695"/>
             <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1417"/>
             <view key="contentView" wantsLayer="YES" id="EiT-Mj-1SZ">
-                <rect key="frame" x="0.0" y="0.0" width="480" height="360"/>
+                <rect key="frame" x="0.0" y="0.0" width="820" height="695"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="27" horizontalPageScroll="10" verticalLineScroll="27" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qok-pB-j2k" userLabel="Scroll View">
-                        <rect key="frame" x="0.0" y="0.0" width="150" height="360"/>
-                        <clipView key="contentView" drawsBackground="NO" id="lG5-nR-luw">
-                            <rect key="frame" x="0.0" y="0.0" width="150" height="360"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            <subviews>
-                                <outlineView appearanceType="vibrantLight" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" multipleSelection="NO" autosaveColumns="NO" rowHeight="24" rowSizeStyle="automatic" viewBased="YES" floatsGroupRows="NO" indentationPerLevel="16" outlineTableColumn="2gU-Vi-hbh" id="npL-MS-w2J" userLabel="Outline View" customClass="ExtOutlineView" customModule="PLBindableControls">
-                                    <rect key="frame" x="0.0" y="0.0" width="150" height="360"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <size key="intercellSpacing" width="2" height="3"/>
-                                    <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
-                                    <tableColumns>
-                                        <tableColumn identifier="SidebarColumn" width="148" minWidth="16" maxWidth="1000" id="2gU-Vi-hbh">
-                                            <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
-                                                <font key="font" metaFont="smallSystem"/>
-                                                <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
-                                                <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
-                                            </tableHeaderCell>
-                                            <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" id="EPh-tu-5AT">
-                                                <font key="font" metaFont="system"/>
-                                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                                <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                            </textFieldCell>
-                                            <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
-                                            <prototypeCellViews>
-                                                <tableCellView identifier="Cell" id="TSR-tx-1T8" userLabel="Cell View">
-                                                    <rect key="frame" x="1" y="1" width="148" height="24"/>
-                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                    <subviews>
-                                                        <imageView translatesAutoresizingMaskIntoConstraints="NO" id="LBy-VP-IiF">
-                                                            <rect key="frame" x="3" y="3" width="18" height="18"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="height" constant="18" id="eyh-bG-URa"/>
-                                                                <constraint firstAttribute="width" constant="18" id="usx-5H-HYG"/>
-                                                            </constraints>
-                                                            <imageCell key="cell" refusesFirstResponder="YES" imageScaling="proportionallyDown" image="NSFolder" id="rYx-pI-v3z"/>
-                                                        </imageView>
-                                                        <textField verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8EX-y5-TGH" customClass="TextField" customModule="PLBindableControls">
-                                                            <rect key="frame" x="26" y="3" width="121" height="18"/>
-                                                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" title="Name" placeholderString="Name" usesSingleLineMode="YES" id="ffY-f2-7NF">
-                                                                <font key="font" metaFont="system"/>
-                                                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                                            </textFieldCell>
-                                                            <accessibility identifier="Name"/>
-                                                        </textField>
-                                                    </subviews>
-                                                    <constraints>
-                                                        <constraint firstItem="8EX-y5-TGH" firstAttribute="bottom" secondItem="LBy-VP-IiF" secondAttribute="bottom" id="CcT-ry-4gA"/>
-                                                        <constraint firstAttribute="bottom" secondItem="8EX-y5-TGH" secondAttribute="bottom" constant="3" id="W3O-w7-FcE"/>
-                                                        <constraint firstItem="LBy-VP-IiF" firstAttribute="leading" secondItem="TSR-tx-1T8" secondAttribute="leading" constant="3" id="YCn-n4-MMS"/>
-                                                        <constraint firstItem="LBy-VP-IiF" firstAttribute="top" secondItem="8EX-y5-TGH" secondAttribute="top" id="aUr-Z0-883"/>
-                                                        <constraint firstAttribute="bottom" secondItem="LBy-VP-IiF" secondAttribute="bottom" constant="3" id="b2D-y4-QrR"/>
-                                                        <constraint firstAttribute="trailing" secondItem="8EX-y5-TGH" secondAttribute="trailing" constant="3" id="c73-c1-jjg"/>
-                                                        <constraint firstItem="8EX-y5-TGH" firstAttribute="leading" secondItem="LBy-VP-IiF" secondAttribute="trailing" constant="7" id="dRp-FE-ugF"/>
-                                                    </constraints>
-                                                    <connections>
-                                                        <outlet property="imageView" destination="LBy-VP-IiF" id="otO-EU-xGk"/>
-                                                        <outlet property="textField" destination="8EX-y5-TGH" id="hvo-Cr-vbd"/>
-                                                    </connections>
-                                                </tableCellView>
-                                            </prototypeCellViews>
-                                        </tableColumn>
-                                    </tableColumns>
-                                </outlineView>
-                            </subviews>
-                            <nil key="backgroundColor"/>
-                        </clipView>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="150" id="T9Z-02-uyk"/>
-                        </constraints>
-                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="TfE-9R-Xtl">
-                            <rect key="frame" x="0.0" y="-16" width="0.0" height="16"/>
-                            <autoresizingMask key="autoresizingMask"/>
-                        </scroller>
-                        <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="fgH-Xy-y9X">
-                            <rect key="frame" x="-16" y="0.0" width="16" height="0.0"/>
-                            <autoresizingMask key="autoresizingMask"/>
-                        </scroller>
-                    </scrollView>
-                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2dB-AM-oPr" customClass="Label" customModule="PLBindableControls">
-                        <rect key="frame" x="164" y="323" width="173" height="17"/>
+                    <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Obe-lp-Zh6" userLabel="Table Container" customClass="BackgroundView" customModule="PLBindableControls">
+                        <rect key="frame" x="20" y="20" width="780" height="655"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Name" id="0Kd-62-RAM">
-                            <font key="font" metaFont="systemBold"/>
-                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                        </textFieldCell>
-                    </textField>
-                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ucd-lB-fTw" customClass="Label" customModule="PLBindableControls">
-                        <rect key="frame" x="164" y="298" width="173" height="17"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Department" id="t1L-aO-6l2">
-                            <font key="font" metaFont="system"/>
-                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                        </textFieldCell>
-                    </textField>
+                    </customView>
                 </subviews>
-                <constraints>
-                    <constraint firstAttribute="bottom" secondItem="Qok-pB-j2k" secondAttribute="bottom" id="CDH-7v-Z4E"/>
-                    <constraint firstItem="Qok-pB-j2k" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" id="Erc-PT-fi7"/>
-                    <constraint firstItem="Qok-pB-j2k" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" id="XBn-df-lXw"/>
-                </constraints>
             </view>
+            <point key="canvasLocation" x="61" y="-202.5"/>
         </window>
     </objects>
-    <resources>
-        <image name="NSFolder" width="32" height="32"/>
-    </resources>
 </document>
